Add a draft infer api not runnable
